--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <title>Musical Guessing Zoo</title>
     <link rel="stylesheet" href="/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Risque" rel="stylesheet">
-    <!-- <link rel="shortcut icon" type="image/png" href="/favicon.ico"/> -->
+    <link rel="icon" href="bear.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="bear.ico" type="image/x-icon" />
     <script defer src="/bundle.js"></script>
   </head>
   <body>
