--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <link rel="stylesheet" href="/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Risque" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
     <link rel="icon" href="bear.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="bear.ico" type="image/x-icon" />
     <script defer src="/bundle.js"></script>
